Switch to Springboot 3 and Java 17